--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div>
         <nav>
             <ul>
-                <li><a href="index.html" target="blank">Rico&Sano</a></li>
+                <li><a href="./index.html" target="blank">Rico&Sano</a></li>
                 <li><a href="./productos.html" target="blank">Productos</a></li>
                 <li><a href="./nosotros.html" target="blank">Nosotros</a></li>
                 <li><a href="./contacto.html" target="blank">Contacto</a></li>
@@ -53,46 +53,62 @@
                 <img src="./img/imagen10 .jpg" alt="Empanadas">
                 <h2>Empanadas</h2>
                 <p>Carne a cuchillo y Pollo</p>
-                <button class="add-to-cart-button">Agregar al carrito</button>
+                <div class="botonCarrito">
+                        <button class="boton">Agregar al carrito
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </button>              
+                </div>
             </article>
             <article class="card">
                 <img src="./img/imagen12.jpg" alt="Croissant">
                 <h2>Croissant</h2>
                 <p>Precio por docena.</p>
-                <button class="add-to-cart-button">Agregar al carrito</button>
+                <div class="botonCarrito">
+                        <button class="boton">Agregar al carrito
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </button>              
+                </div>
             </article>
             <article class="card">
                 <img src="./img/imagen13.jpg" alt="Imagen de la tarjeta">
                 <h2>Pre-pizza</h2>
                 <p>Frezzada, de tomate y Fugazzeta.</p>
-                <button class="add-to-cart-button">Agregar al carrito</button>
+                <div class="botonCarrito">
+                        <button class="boton">Agregar al carrito
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </button>              
+                </div>
             </article>
 
             <article class="card">
                 <img src="./img/imagen16.jpg" alt="Imagen de la tarjeta">
                 <h2>Medialunas</h2>
                 <p>Por docena.</p>
-                <button class="add-to-cart-button">Agregar al carrito</button>
+                <div class="botonCarrito">
+                        <button class="boton">Agregar al carrito
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </button>              
+                </div>
             </article>
             <article class="card">
                 <img src="./img/imagen17.jpg" alt="Imagen de la tarjeta">
                 <h2>Pastafrola</h2>
                 <p>De Batata y Membrillo</p>
                 <div class="botonCarrito">
-                    <button class="boton">Agregar al carrito</button>
-                    <div class="carrito">
-                        <a href="#" target="blank">
+                        <button class="boton">Agregar al carrito
                             <i class="fa-solid fa-cart-shopping"></i>
-                        </a>
-
-                    </div>
+                        </button>              
                 </div>
             </article>
             <article class="card">
                 <img src="./img/image6.jpg" alt="Imagen de la tarjeta">
                 <h2>Panes de hamburguesa</h2>
                 <p>Por 4 unidades.</p>
-                <button class="add-to-cart-button">Agregar al carrito</button>
+                <div class="botonCarrito">
+                        <button class="boton">Agregar al carrito
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </button>              
+                </div>
             </article>
 
 
