cargar nosotros arreglado

--- a/nosotros.html
+++ b/nosotros.html
@@ -25,92 +25,97 @@
             tu navegador no soporta video
         </video>
     </div> -->
-    <div class="logo"><img src="/img/logo2.png" alt="Rico & Sano"></div>
+    <div class="logo"><img src="./img/logo2.png" alt="Rico & Sano"></div>
     <div>
         <nav>
             <ul>
-                <li><a href="#">Rico&Sano</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="./index.html" target="blank">Rico&Sano</a></li>
+                <li><a href="./productos.html" target="blank">Productos</a></li>
+                <li><a href="./nosotros.html" target="blank">Nosotros</a></li>
+                <li><a href="./contacto.html" target="blank">Contacto</a></li>
             </ul>
         </nav>
     </div>
     <div class="carrito">
-        <i class="fa-solid fa-cart-shopping"></i>
-        <button></button>
+        <a href="#" target="blank">
+            <i class="fa-solid fa-cart-shopping"></i>
+        </a>
+
     </div>
 
 
 </header>
 
 <body>
-    <main>
-        <section class="productos">
-            <article class="card">
-                <img src="./img/imagen10 .jpg" alt="Empanadas">
-                <h2>Empanadas</h2>
-                <p>Carne a cuchillo y Pollo</p>
-            </article>
-            <article class="card">
-                <img src="./img/imagen12.jpg" alt="Croissant">
-                <h2>Croissant</h2>
-                <p>Precio por docena.</p>
-            </article>
-            <article class="card">
-                <img src="./img/imagen13.jpg" alt="Imagen de la tarjeta">
-                <h2>Pre-pizza</h2>
-                <p>Frezzada, de tomate y Fugazzeta.</p>
-            </article>
+    <main class="mainNosotros">
+        <h1>🌾✨ ¡Bienvenidos a Rico & Sano! ✨🌾</h1>
+        <h2>Comida rica, casera y 100% libre de gluten</h2>
+        <p class="ParrafoNosotros">
+            Hola, soy Daiana, de Ezeiza. Soy celíaca desde los 18 años, y desde entonces descubrí lo difícil que puede
+            ser encontrar opciones ricas, seguras y variadas para quienes vivimos sin gluten.
 
-            <article class="card">
-                <img src="./img/imagen16.jpg" alt="Imagen de la tarjeta">
-                <h2>Medialunas</h2>
-                <p>Por docena.</p>
-            </article>
-            <article class="card">
-                <img src="./img/imagen17.jpg" alt="Imagen de la tarjeta">
-                <h2>Pastafrola</h2>
-                <p>De Batata y Membrillo</p>
-            </article>
-            <article class="card">
-                <img src="./img/image6.jpg" alt="Imagen de la tarjeta">
-                <h2>Panes de hamburguesa</h2>
-                <p>Por 4 unidades.</p>
-            </article>
+            Amo cocinar desde siempre, y eso me llevó a crear este espacio pensado especialmente para personas como vos,
+            que buscan disfrutar sin preocupaciones.
 
-
-        </section>
-        <section>
-            <video class="video" src="/video.mp4" autoplay mute controls>
-
-            </video>
-        </section>
-        <section>
-            <form action="https://formspree.io/f/mvgqanod" method="POST">
-                <input type="text" name="nombre" placeholder="Tu nombre">
-                <input type="mail" name="email" placeholder="Tu email">
-                <textarea name="message" rows="5" placeholder="Escribi tu mensaje aqui"></textarea>
-                <!-- your other form fields go here -->
-                <button type="submit"> Enviar </button>
-            </form>
-        </section>
+            Sé lo frustrante que puede ser no poder comer lo que más nos gusta… por eso, en cada receta pongo todo mi
+            amor y dedicación para que disfrutes de sabores caseros, seguros y deliciosos.
+        </p>
+        <p>✨ Cocino para que vuelvas a disfrutar, sin miedo y sin culpas.
+            ✨ Todo es 100% libre de gluten, con control cruzado y mucho cuidado.
+            ✨ Me llena el alma ver a mis clientes felices al reencontrarse con esos sabores que creían perdidos.</p>
+        <p>¡Gracias por confiar en mí y dejarme ser parte de tu mesa!</p>
+        <p>📍 Ezeiza, Buenos Aires
+            📦 Pedidos online
+            📲 Instagram:rico_y_sano_glutenfree
+            WhatsApp:wa.me/541130958848</p> 
 
     </main>
 
 </body>
-<footer>
-    <div class="gps">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13097.250134463668!2d-58.533448463330146!3d-34.84837355613232!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd0cf6e1e2e2d%3A0xf22ee15deb61d676!2sDe%C3%A1n%20Funes%20607%2C%20B1804FAK%20Ezeiza%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1758549414052!5m2!1ses-419!2sar"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <!-- <iframe
-            src="https://www.google.com/maps/embed?pb=!4v1758549207580!6m8!1m7!1snKDsDCvMNPJ3raOhliERCA!2m2!1d-34.84841346110427!2d-58.52342825993303!3f58.69960654920531!4f-8.231762619420806!5f0.7820865974627469"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+<footer class="footerContacto">
 
+
+    <section class="nfoFooter">
+        <div class="logoFooter"><img src="./img/logo2.png" alt="Rico & Sano"></div>
+
+        <div class="redesFooter">
+            <a href="https://www.instagram.com/rico_y_sano_glutenfree/" target="blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+
+            <a href="https://wa.me/541130958848" target="blank">
+                <i class="fa-brands fa-whatsapp"></i>
+            </a>
+            <a href="#" target="blank">
+                <i class="fa-brands fa-facebook-f"></i>
+            </a>
+        </div>
+
+        <div class="ulFooter">
+            <ul>
+                <li><a href="#">Politica de privacidad</a></li>
+                <li><a href="#">Terminos y condiciones</a></li>
+                <li><a href="#">Aviso Legal</a></li>
+                <li><a href="#">Politica de cookies</a></li>
+            </ul>
+        </div>
+
+    </section>
+    <section class="mapaFooter">
+
+        <div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13097.250134463668!2d-58.533448463330146!3d-34.84837355613232!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd0cf6e1e2e2d%3A0xf22ee15deb61d676!2sDe%C3%A1n%20Funes%20607%2C%20B1804FAK%20Ezeiza%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1758549414052!5m2!1ses-419!2sar"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+
+
+    </section>
+    <div>
+        <p>©2025 Rico&Sano.Todos los derechos reservados</p>
     </div>
-    <p>©2025 Rico&Sano.Todos los derechos reservados</p>
 </footer>
 
 
