--- a/index.html
+++ b/index.html
@@ -14,17 +14,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-
-    <link rel="stylesheet" href="styles.css">
     <title>ricoysano</title>
 </head>
 <header>
-    <!-- <div class="videoHeader">
-        <video autoplay muted loop playsinline="video-fondo">
-            <source src"/video1.mp4" type"video/mp4">
-            tu navegador no soporta video
-        </video>
-    </div> -->
+    
     <div class="logo"><img src="./img/logo2.png" alt="Rico & Sano"></div>
     <div>
         <nav>
@@ -61,7 +54,7 @@
             </article>
             <article class="card">
                 <img src="./img/imagen12.jpg" alt="Croissant">
-                <h2>Croissant</h2>
+                <h2>FACTURAS AZUCARADAS</h2>
                 <p>Precio por docena.</p>
                 <div class="botonCarrito">
                         <button class="boton">Agregar al carrito
@@ -71,8 +64,8 @@
             </article>
             <article class="card">
                 <img src="./img/imagen13.jpg" alt="Imagen de la tarjeta">
-                <h2>Pre-pizza</h2>
-                <p>Frezzada, de tomate y Fugazzeta.</p>
+                <h2>DESAYUNO</h2>
+                <p>Cafe capuccino y Crossaint</p>
                 <div class="botonCarrito">
                         <button class="boton">Agregar al carrito
                             <i class="fa-solid fa-cart-shopping"></i>
@@ -82,7 +75,7 @@
 
             <article class="card">
                 <img src="./img/imagen16.jpg" alt="Imagen de la tarjeta">
-                <h2>Medialunas</h2>
+                <h2>MEDIALUNAS</h2>
                 <p>Por docena.</p>
                 <div class="botonCarrito">
                         <button class="boton">Agregar al carrito
@@ -92,8 +85,8 @@
             </article>
             <article class="card">
                 <img src="./img/imagen17.jpg" alt="Imagen de la tarjeta">
-                <h2>Pastafrola</h2>
-                <p>De Batata y Membrillo</p>
+                <h2>CUPSCAKE</h2>
+                <p>Decoracion a gusto</p>
                 <div class="botonCarrito">
                         <button class="boton">Agregar al carrito
                             <i class="fa-solid fa-cart-shopping"></i>
@@ -102,7 +95,7 @@
             </article>
             <article class="card">
                 <img src="./img/image6.jpg" alt="Imagen de la tarjeta">
-                <h2>Panes de hamburguesa</h2>
+                <h2>PAN PARA HAMBURGUESA</h2>
                 <p>Por 4 unidades.</p>
                 <div class="botonCarrito">
                         <button class="boton">Agregar al carrito
